--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,9 +24,10 @@ loggingInterceptor = "4.10.0"
 material = "1.12.0"
 google-services = "4.4.2"
 google-firebase-crashlytics = "3.0.3"
-navigation ="2.8.9"
+navigation = "2.8.9"
 navigationFragmentKtx = "2.8.9"
 navigationUiKtx = "2.8.9"
+oauth = "5.10.0"
 okhttp = "4.12.0"
 rxjava = "3.0.4"
 rxandroid = "3.0.0"
@@ -35,6 +36,8 @@ sandwich = "1.2.1"
 securityCrypto = "1.0.0"
 ksp = "2.0.21-1.0.27"
 timber = "5.0.0"
+v2All = "2.11.0"
+v2User = "2.11.0"
 
 [libraries]
 androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
@@ -65,6 +68,7 @@ kotlinx-coroutines-core-common = { module = "org.jetbrains.kotlinx:kotlinx-corou
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+oauth = { module = "com.navercorp.nid:oauth", version.ref = "oauth" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "converterMoshi" }
 rxandroid = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxandroid" }
@@ -72,12 +76,15 @@ rxjava = { module = "io.reactivex.rxjava3:rxjava", version.ref = "rxjava" }
 rxjava3-retrofit-adapter = { module = "com.github.akarnokd:rxjava3-retrofit-adapter", version.ref = "rxjava3RetrofitAdapter" }
 sandwich = { module = "com.github.skydoves:sandwich", version.ref = "sandwich" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+v2-all = { module = "com.kakao.sdk:v2-all", version.ref = "v2All" }
+v2-user = { module = "com.kakao.sdk:v2-user", version.ref = "v2User" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 google-services-plugin = { id = "com.google.gms.google-services", version.ref = "google-services" }
-google-firebase-crashlytics = {id="com.google.firebase.crashlytics", version.ref = "google-firebase-crashlytics"}
-navigation= {id="androidx.navigation.safeargs.kotlin", version.ref="navigation"}
-ksp = {id="com.google.devtools.ksp", version.ref="ksp"}
-parcelize = {id="org.jetbrains.kotlin.plugin.parcelize"}
+google-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "google-firebase-crashlytics" }
+navigation = { id = "androidx.navigation.safeargs.kotlin", version.ref = "navigation" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize" }
+hiltAndroid = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" }
