--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,5 +61,12 @@
                     android:scheme="kakao1888a889e7ea1a4e154040e65c5032ae" />
             </intent-filter>
         </activity>
+
+        <service android:name=".feature.service.PushNotificationService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 </manifest>
