--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ converterMoshi = "2.9.0"
 converterGson = "2.9.0"
 espressoIdlingResource = "3.6.1"
 firebaseBom = "33.10.0"
+firebaseMessaging = "24.1.1"
 gson = "2.12.1"
 hiltAndroid = "2.53.1"
 hiltAndroidCompiler = "2.53.1"
@@ -58,6 +59,7 @@ dagger-hilt-android-testing = { module = "com.google.dagger:hilt-android-testing
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
+firebase-messaging = { module = "com.google.firebase:firebase-messaging", version.ref = "firebaseMessaging" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "compiler" }
 google-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
