--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,11 @@
         android:name="android.hardware.camera"
         android:required="false" />
 
+    <!-- 카카오 공유하기 -->
+    <queries>
+        <package android:name="com.kakao.talk" />
+    </queries>
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -44,6 +49,22 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+            <intent-filter>
+                <data
+                    android:host="kakaolink"
+                    android:scheme="kakao1888a889e7ea1a4e154040e65c5032ae" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="invite"
+                    android:scheme="rollingmoment" />
             </intent-filter>
         </activity>
 
@@ -62,7 +83,8 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".feature.service.PushNotificationService"
+        <service
+            android:name=".feature.service.PushNotificationService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
