--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,6 +40,7 @@ securityCrypto = "1.0.0"
 ksp = "2.1.0-1.0.29"
 timber = "5.0.0"
 v2All = "2.11.0"
+v2Share = "2.11.0"
 v2User = "2.11.0"
 firebaseCrashlyticsBuildtools = "3.0.3"
 
@@ -85,6 +86,7 @@ rxjava3-retrofit-adapter = { module = "com.github.akarnokd:rxjava3-retrofit-adap
 sandwich = { module = "com.github.skydoves:sandwich", version.ref = "sandwich" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 v2-all = { module = "com.kakao.sdk:v2-all", version.ref = "v2All" }
+v2-share = { module = "com.kakao.sdk:v2-share", version.ref = "v2Share" }
 v2-user = { module = "com.kakao.sdk:v2-user", version.ref = "v2User" }
 firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 
